@@ -17,6 +17,7 @@ rules-edit: new filter (location is.parent.of [DeviceGroup])
 rules-edit: new filter 'app has.missing.dependencies'
 download-predefined: introduction of new util to download predefined.xml especially for APP-id datebase
 address-edit: new action split-large-address-group
+rules-edit: new 'filter=(service has.value.only [443])'
 
 bugfix:
 - fixed rule 'filter=(rule has.destination.nat)'
